# heimdall

./: .gitignore  AGENTS.md  CLAUDE.md  CODE_OF_CONDUCT.md  CONTRIBUTING.md  Cargo.toml  DESIGN.md  README.md  ROADMAP.md  SECURITY.md  SPEC.md  package-lock.json  package.json
.claude/: settings.json
.claude/agents/: pr-reviewer.md  rust-api-discipline.md  rust-test-runner.md  rust-unsafe-ffi.md  serde-pitfalls.md  swift-reviewer.md  ui-bundle-verifier.md
.claude/commands/: audit-deps.md  binary-audit.md  fix-unwraps.md
.codex/agents/: heimdall-dashboard-worker.toml  heimdall-explorer.toml  heimdall-provider-worker.toml  heimdall-reviewer.toml
.github/: PULL_REQUEST_TEMPLATE.md  RELEASING.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.yml  config.yml  feature_request.yml
.github/workflows/: ci.yml  codeql-swift.yml  codeql.yml  logo-assets.yml  release-smoke.yml  release.yml  security-scans.yml
docs/: CLOUDKIT.md  configuration.md  data-sources.md  desloppify.md  features.md  heimdall-parity-roadmap.md  heimdallbar-parity-roadmap.md  install.md
extensions/heimdall-companion/: README.md  build.mjs  manifest.json  package-lock.json  package.json
macos/Heimdall/: project.yml
macos/HeimdallBar/: project.yml
packaging/homebrew/: heimdall.rb
regressions/: README.md  optimizer-reread-detector.md  pricing-fallback-claude.md
schemas/: heimdall.config.schema.json
script/: build_and_install.sh  build_and_run.sh  build_dmg.sh  bundle_heimdall_helper.sh  dmg_notarize.sh  generate_dmg_background.py  package_heimdall_dmg.sh  package_heimdallbar_distribution.sh  sign_heimdallbar_distribution.sh  validate_heimdallbar_distribution.sh
src/: claude_admin.rs  cli_tests.rs  config.rs  config_io.rs  currency.rs  export.rs  install_json.rs  lib.rs  main.rs  menubar.rs  models.rs  official_pricing.rs  openai.rs  pricing.rs  pricing_defs.rs  pricing_sync.rs  tz.rs  usage_monitor.rs  webhooks.rs
src/agent_status/: client.rs  mod.rs  models.rs
src/analytics/: blocks.rs  burn_rate.rs  correlation.rs  depletion.rs  forecast.rs  mod.rs  predictive.rs  quota.rs
src/archive/: companion_token.rs  index.rs  macos_cache.rs  manifest.rs  mod.rs  objects.rs
src/hook/: bypass.rs  ingest.rs  install.rs  main.rs  mod.rs
src/instruction_files/: claude_md_history.rs  discovery.rs  frontmatter.rs  git_history.rs  mod.rs  tokens.rs
src/live_providers/: codex.rs  conditions.rs  mod.rs
src/mcp/: install.rs  mod.rs  tests.rs  tools.rs
src/mcp_servers/: discovery_claude.rs  discovery_codex.rs  logs.rs  mod.rs  process.rs  redact.rs  usage.rs
src/oauth/: api.rs  credentials.rs  mod.rs  models.rs
src/optimizer/: agents.rs  bash.rs  claude_md.rs  claude_md_impact.rs  grade.rs  hook_bypass.rs  hook_latency.rs  mcp.rs  mod.rs  reread.rs  retry.rs
src/scanner/: agent_sessions.rs  classifier.rs  cowork.rs  db.rs  mod.rs  parser.rs  provider.rs  tests.rs
tests/: imports_integration.rs  instruction_files_integration.rs  macos_cache_v2_integration.rs  mcp_servers_integration.rs
(+510 files in other folders)
