[package]
name = "claude-usage-tracker"
version = "0.1.0"
edition = "2024"
description = "Local analytics dashboard for Claude Code usage and token consumption"
license = "MIT"

[[bin]]
name = "claude-usage-tracker"
path = "src/main.rs"

[[bin]]
name = "heimdall-hook"
path = "src/hook/main.rs"

[dependencies]
anyhow = "1"
axum = "0.8"
chrono = { version = "0.4", features = ["serde"] }
clap = { version = "4", features = ["derive"] }
csv = "1"
regex = "1"
dirs = "6"
open = "5"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
rusqlite = { version = "0.39", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
toml = "1"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "net", "macros", "time"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
walkdir = "2"

[dev-dependencies]
http-body-util = "0.1"
tempfile = "3"
tower = { version = "0.5", features = ["util"] }

[profile.release]
lto = true
strip = true
