[package]
name = "claude-usage-tracker"
version = "0.1.0"
edition = "2024"
description = "Heimdall: local analytics dashboard for coding agent usage and token consumption (Claude Code, Codex)"
license = "BSD-3-Clause"

[[bin]]
name = "claude-usage-tracker"
path = "src/main.rs"

[[bin]]
name = "heimdall-hook"
path = "src/hook/main.rs"

[features]
default = ["mcp"]
mcp = ["dep:rmcp"]

[dependencies]
anyhow = "1"
axum = "0.8"
chrono = { version = "0.4", features = ["serde", "unstable-locales"] }
clap = { version = "4", features = ["derive"] }
csv = "1"
regex = "1"
dirs = "6"
open = "5"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
rusqlite = { version = "0.39", features = ["bundled"] }
serde = { version = "1", features = ["derive"] }
strum = { version = "0.28", features = ["derive"] }
serde_json = "1"
rand = "0.10"
sha2 = "0.11"
subtle = "2"
thiserror = "2"
toml = "1"
notify = "8"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "net", "macros", "time", "sync", "io-std"] }
tokio-stream = { version = "0.1", features = ["sync"] }
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
walkdir = "2"
rmcp = { version = "1.5.0", optional = true, features = ["server", "macros", "schemars", "transport-async-rw"] }
schemars = "1"
jaq-core = "3.0.0"
jaq-std = "3.0.0"
jaq-json = { version = "2.0.0", features = ["std"] }
zip = { version = "8", default-features = false, features = ["deflate"] }
aes = "0.8"
aes-gcm = "0.10"
cbc = { version = "0.2", features = ["alloc"] }
hmac = "0.12"
pbkdf2 = "0.12"
sha1 = "0.10"

[dev-dependencies]
aes-gcm = "0.10"
http-body-util = "0.1"
tempfile = "3"
tower = { version = "0.5", features = ["util"] }

[profile.release]
lto = true
strip = true

[target.'cfg(target_os = "macos")'.dependencies]
security-framework = "3"
